{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 3,
  "lineage": "42dee5c4-34d6-1866-60ca-b4e2181b3784",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tfer--rtb-00e44179552178e42",
      "provider": "provider[\"registry.terraform.io/-/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes_flat": {
            "arn": "arn:aws:ec2:ap-northeast-2:667994629779:route-table/rtb-00e44179552178e42",
            "id": "rtb-00e44179552178e42",
            "owner_id": "667994629779",
            "propagating_vgws.#": "0",
            "route.#": "0",
            "tags.%": "0",
            "tags_all.%": "0",
            "vpc_id": "vpc-04623bbd67846e1f2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tfer--rtb-0b5528c96591c50d7",
      "provider": "provider[\"registry.terraform.io/-/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes_flat": {
            "arn": "arn:aws:ec2:ap-northeast-2:667994629779:route-table/rtb-0b5528c96591c50d7",
            "id": "rtb-0b5528c96591c50d7",
            "owner_id": "667994629779",
            "propagating_vgws.#": "0",
            "route.#": "1",
            "route.0.carrier_gateway_id": "",
            "route.0.cidr_block": "0.0.0.0/0",
            "route.0.core_network_arn": "",
            "route.0.destination_prefix_list_id": "",
            "route.0.egress_only_gateway_id": "",
            "route.0.gateway_id": "igw-030a1176b5bea64b5",
            "route.0.instance_id": "",
            "route.0.ipv6_cidr_block": "",
            "route.0.local_gateway_id": "",
            "route.0.nat_gateway_id": "",
            "route.0.network_interface_id": "",
            "route.0.transit_gateway_id": "",
            "route.0.vpc_endpoint_id": "",
            "route.0.vpc_peering_connection_id": "",
            "tags.%": "1",
            "tags.Name": "public-subnet1-routing",
            "tags_all.%": "1",
            "tags_all.Name": "public-subnet1-routing",
            "vpc_id": "vpc-04623bbd67846e1f2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tfer--subnet-0453ecb84ca59bd5e",
      "provider": "provider[\"registry.terraform.io/-/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes_flat": {
            "id": "rtbassoc-050b801ed0382aaa1",
            "route_table_id": "rtb-0b5528c96591c50d7",
            "subnet_id": "subnet-0453ecb84ca59bd5e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tfer--subnet-0b58d1adb0e630c50",
      "provider": "provider[\"registry.terraform.io/-/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes_flat": {
            "id": "rtbassoc-0e573a6ac08125d00",
            "route_table_id": "rtb-08982bbb172cbb507",
            "subnet_id": "subnet-0b58d1adb0e630c50"
          }
        }
      ]
    }
  ]
}